# nix-csi

./: .envrc  .gitignore  BUILDER_PLAN.md  CLAUDE.md  LICENSE  README.md  TODO.md  default.nix  flake.nix  justfile  liximage.nix  niximage.nix  result-1  result-2  result-3  result-4  scratchimage.nix  shell.nix
.github/assets/: ssh-config
.github/workflows/: ci.yaml  test-nixos.yaml
AI/: maintenance.md
AI/todo/: pynixd-nixkube-improvements.md
demo/: flake.nix  nixos.nix  pod.nix
dev/lillecarl/: default.nix
doc/: options.md
environments/builder/: default.nix
environments/cache/: default.nix
environments/modules/: gc.nix  logger.nix  nix-daemon.nix  setup.nix  ssh.nix  users.nix
environments/node/: default.nix
environments/proxy/: default.nix
kubenix/: builder.nix  cache.nix  config.nix  csidriver.nix  daemonset.nix  default.nix  namespace.nix  nixOptions.nix  options.nix  pynixd.nix  rbac.nix  secret.nix  undeploy.nix
kubenix/ci/: default.nix  nri.nix  test-workloads.nix
lib/: default.nix
metadata/: 0.4.3.md  CHANGELOG-0.5.0.md  CHANGELOG.md  next.md
metadata/plans/: cri-v1.md  improvements.md  improvements2.md  nixos-tests.md  (+2 more)
pkgs/: default.nix  kr8s.nix  python-jsonpath.nix  shellous.nix
python/: default.nix  pyproject.toml
python/nix_cache/: cli.py
python/nix_csi/: builders.py  cache.py  cleanup.py  cli.py  constants.py  copytocache.py  cri.py  errors.py  events.py  hardlinks.py  identityservicer.py  kubernetes.py  models.py  nix.py  nriplugin.py  ns_mount.py  service.py  store.py  subprocessing.py  volume.py  zmq_server.py
python/nix_timegc/: cli.py
python/tests/: test_annotations.py  test_subprocessing.py
tests/: TODO.md
tmp/: testpod.nix  watch.py
(+128 files in other folders)
