[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nix-csi"
version = "0.4.3"
description = "CSI driver populating mounts with a Nix store"
authors = [{ name = "lillecarl", email = "github@lillecarl.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
  "kr8s",
  "csi",
  "nri",
  "cri",
  "pyzmq",
  "cachetools",
  "aiofiles",
  "shellous",
]

[project.scripts]
nix-csi = "nix_csi.cli:main"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
